blueperf/helper/istio/acmeair-gateway.yaml
##################################################################
# Gateway
##################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: acmeair-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
