blueperf/helper/istio/acmeair-virtualservice.yaml
###################################################################
# Virtual Services
###################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acmeair
spec:
  hosts:
  - "*"
  gateways:
  - acmeair-gateway
  http:
  - match:
    - uri:
        prefix: /flight
    route:
    - destination:
        host: acmeair-flight-service
        port:
          number: 9080
  - match:
    - uri:
        prefix: /booking
    route:
    - destination:
        host: acmeair-booking-service
        port:
          number: 9080
  - match:
    - uri:
        prefix: /customer
    route:
    - destination:
        host: acmeair-customer-service
        port:
          number: 9080
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: acmeair-auth-service
        port:
          number: 9080
